- added color indicator for non-existing MIRO path
- added single project mode to focus one project only
- improved allow to close non-mainfile while running
- improved select next project when closing the current edited file-node in the Project Explorer that is also part of other projects
- removed warning when deleting a project file that does not exist

Version 1.18.6 *
==================
- added highlighting of project entries while running
- fixed color theme issue when Windows is in dark mode and Studio is using light mode

Version 1.18.5
==================
- added command line argument to log C4U information and errors (`--dump-c4u-data`)
- fixed missing spaces in breakpoint context menu text
- fixed GDX export dialog non-modal on macOS
- fixed fullscreen mode on Windows
- fixed help to documentation triggered from Connect Editor, EFI Editor, Parameter File Editor and Solver Option Editor

Version 1.18.4
==================
- fixed incomplete search results when searching in `This Project`
- fixed incomplete selection in LST file when using the scroll action
- fixed wrong behavior on overwriting a file loaded via the welcome page or the model library
- fixed incorrect handling of some message box decisions due to a Qt change
- fixed some Studio debugger issues with large models
- fixed explicit solver name not recognized by NEOS
- upgraded to Qt 6.7.2

Version 1.18.3
==================
- added support for new GAMS license file format with 8 lines
- added missing context menu actions for folder entries in projects
- added `--skip-check-for-update` to skip all online `check for update` actions
- fixed scrolling with page up/down doesn't work in process log
- fixed base directory line input too long in project edit
- fixed cut off text in NEOS dialog
- fixed activation of parameter search filter in GAMS Configuration editor
- fixed suffix issue for opt files on Windows

Version 1.18.2
==================
- added transition page after the GAMS Engine login